3_terraform_best_practices_variables/internet_gateway.tf
// Internet Gateway
resource "aws_internet_gateway" "default" {
    vpc_id = "${aws_vpc.default.id}"
}
